# boring2

.github/prefix-test/: Cargo.toml
.github/prefix-test/src/: main.rs
.github/workflows/: prefix.yml
boring-sys/: Cargo.toml
