[package]
edition = "2024"
name = "prefix-test"
version = "0.1.0"

[workspace]

[dependencies]
anyhow = "1.0.100"
boring-sys2 = { version = "5.0.0-alpha.10", path = "../../boring-sys" } #, features = ["prefix-symbols"] }
diesel = { version = "2.3.4", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled-sqlcipher-vendored-openssl"] }
openssl-sys = { version = "0.9.111", features = ["vendored"] }
tokio = { version = "1.48.0", features = ["full"] }
wreq = "6.0.0-rc.23"
wreq-util = "3.0.0-rc.7"

[patch.crates-io]
boring-sys2 = { path = "../../boring-sys" }
